# claudy

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.test.tsx  App.tsx  global.css  main.tsx  theme.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ProjectListItem.test.tsx  ProjectListItem.tsx  SplashScreen.tsx
src/components/chat/: FileReferenceBadge.tsx  MessageList.test.tsx  MessageList.tsx
src/shared/: mcp.ts  md5.test.ts  md5.ts  settings.ts  toolPolicy.ts  usageDashboard.test.ts  usageDashboard.ts
src/test/: App.test.tsx  fixtures.ts  providers.tsx  render.tsx  setup.ts  updater.test.ts
src/test/components/: ProjectListItem.test.tsx
src/test/components/chat/: MessageList.test.tsx
src/test/shared/: md5.test.ts  usageDashboard.test.ts
src/test/views/: ChatView.flow.test.tsx  ChatView.test.tsx  HomeView.test.tsx  UsageDashboardView.test.tsx
src/views/: ChatView.flow.test.tsx  ChatView.test.tsx  ChatView.tsx  HomeView.test.tsx  HomeView.tsx  UsageDashboardView.tsx
