[package]
name = "claudy"
version = "0.3.3"
description = "Claudy — Claude Code Desktop IDE"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "claudy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs-next = "2"
base64 = "0.22"
portable-pty = "0.8"
regex = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
